--- a/ProyectoFinal_ActivosFijos/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Vehiculos Disponibles", "VistaVehiculos", "Carros", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Ejemplo ", "Index", "Ejemplo", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Repuestos Disponibles", "VistaRepuestos", "Repuesto", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Ejemplo ", "Index", "Ejemplo", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
