--- a/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
@@ -233,6 +233,7 @@
                 <h2 class="mb-2 text-center">Lista de Carros</h2>
 
                 <a class="btn btn-success mb-4" href="@Url.Action("Add")">Agregar</a>
+                <a href="@Url.Action("Index", "Admin")" class="btn btn-success">Regresar al menú principal</a>
 
                 <div class="row">
                     @foreach (var carro in Model)
