--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/Index.cshtml
@@ -236,8 +236,9 @@
 
             </div>
             <div class="col-lg-8">
-                <h2 class="mb-2 text-center">Lista de Tours</h2>
+                <h2 class="mb-2 text-center">Lista de Repuestos</h2>
 
+                <a href="@Url.Action("Index", "Admin")" class="btn btn-success">Regresar al menú principal</a>
                 <a class="btn btn-success mb-4" href="@Url.Action("Add")">Agregar</a>
 
                 <div class="row">
