--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
@@ -70,7 +70,7 @@
         </table>
     </div>
 </div>
-<a href="@Url.Action("Index", "Carros")" class="btn btn-success">Regresar al menú principal</a>
+<a href="@Url.Action("Index", "Admin")" class="btn btn-success">Regresar al menú principal</a>
 
 
 <script>
