Config Filtros y Layouts

--- a/ProyectoFinal_ActivosFijos/Views/Carros/Add.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProyectoFinal_ActivosFijos.Models.TableViewModel.CarrosTableViewModel
 @{
     ViewBag.Title = "Agregar Vehiculos Nuevos";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 <style>
     body {
