--- a/ProyectoFinal_ActivosFijos/Views/Carros/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Editar Vehiculos";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 
 <div class="container">
