--- a/ProyectoFinal_ActivosFijos/Views/Carros/MostrarVehiculoIndividual.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/MostrarVehiculoIndividual.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "MostrarInformacionCarros";
+    Layout = "~/Views/Shared/_ClientLayout.cshtml"; // Utiliza el diseño específico para cliente
 }
 <!DOCTYPE html>
 <html lang="es">
