--- a/ProyectoFinal_ActivosFijos/Views/Comprador/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Comprador/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_ClientLayout.cshtml"; // Utiliza el diseño específico para cliente
 }
 
 <h2>Index</h2>
