--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/VistaRepuestos.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/VistaRepuestos.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Repuestos";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Utiliza el diseño específico para cliente
+    Layout = "~/Views/Shared/_ClientLayout.cshtml"; // Utiliza el diseño específico para cliente
 }
 
 <h2>Vehiculos Disponibles</h2>
