--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Edit.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Editar Usuario";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 
 
