--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model  List<ProyectoFinal_ActivosFijos.Models.TableViewModel.UsuariosTableViewModel>
 @{
     ViewBag.Title = "Add Usuario";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 <div class="container mt-4">
 
