--- a/ProyectoFinal_ActivosFijos/Views/Carros/VistaVehiculos.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/VistaVehiculos.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Carros";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Utiliza el diseño específico para cliente
+    Layout = "~/Views/Shared/_ClientLayout.cshtml"; // Utiliza el diseño específico para cliente
 }
 
 <h2>Vehiculos Disponibles</h2>
