--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/Add.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProyectoFinal_ActivosFijos.Models.TableViewModel.RepuestosTableViewModel
 @{
     ViewBag.Title = "Add Repuesto";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 <style>
     body {
