--- a/ProyectoFinal_ActivosFijos/Views/Shared/_ClientLayout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_ClientLayout.cshtml
@@ -25,7 +25,8 @@
                         Perfil
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                        
+                        <a class="dropdown-item" href="@Url.Action("Edit", "Comprador", new { id = (Session["UsuarioActual"] as ProyectoFinal_ActivosFijos.Models.ViewModel.UsuariosViewModel)?.Id })">Gestion de Perfil</a>
+                        <a class="dropdown-item" href="@Url.Action("CerrarSesion", "Comprador")">Cerrar Sesión</a>
                     </div>
                 </li>
             </ul>
@@ -34,13 +35,14 @@
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            
+            @Html.ActionLink("Toyota", "Index", "Comprador", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between" id="navbarNav2">
                 <ul class="navbar-nav flex-grow-1">
-                    
+                    <li class="nav-item">@Html.ActionLink("Vehiculos Disponibles", "VistaVehiculos", "Carros", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Repuestos Disponibles", "VistaRepuestos", "Repuesto", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
@@ -59,3 +61,4 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
