--- a/ProyectoFinal_ActivosFijos/Views/Carrito/CheckOut.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carrito/CheckOut.cshtml
@@ -1,7 +1,52 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "CheckOut";
 }
 
 <h2>CheckOut</h2>
 
+@if (TempData["Message"] != null)
+{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        $(document).ready(function () {
+            Swal.fire({
+                icon: 'success',
+                title: '¡Compra realizada!',
+                text: '@TempData["Message"]',
+                confirmButtonText: 'Aceptar'
+            });
+        });
+    </script>
+}
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        $(document).ready(function () {
+            Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: '@TempData["ErrorMessage"]',
+                confirmButtonText: 'Aceptar'
+            });
+        });
+    </script>
+}
+
+@using (Html.BeginForm("CheckOut", "Carrito", FormMethod.Post))
+{
+    <div class="form-group">
+        <label for="cardNumber">Número de Tarjeta</label>
+        <input type="text" class="form-control" id="cardNumber" name="cardNumber" required minlength="16" maxlength="16" pattern="\d{16}" title="Número de tarjeta debe tener 16 dígitos." />
+    </div>
+    <div class="form-group">
+        <label for="expiryDate">Fecha de Expiración</label>
+        <input type="month" class="form-control" id="expiryDate" name="expiryDate" required min="@DateTime.Now.ToString("yyyy-MM")" />
+    </div>
+    <div class="form-group">
+        <label for="cvv">CVV</label>
+        <input type="text" class="form-control" id="cvv" name="cvv" required minlength="3" maxlength="3" pattern="\d{3}" title="CVV debe tener 3 dígitos." />
+    </div>
+    <button type="submit" class="btn btn-primary">Confirmar Compra</button>
+}
