--- a/ProyectoFinal_ActivosFijos/Views/Comprador/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Comprador/Edit.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Edit Profile";
 }
 
-<h2>Edit Profile</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Usuario</h4>
+        <h2>Edit Profile</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -98,7 +97,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
