--- a/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
@@ -9,12 +9,13 @@
     body {
         margin: 0;
         padding: 0;
-        color: white; /* Cambia el color del texto a blanco */
+        color: #003b57; /* Cambia el color del texto a blanco */
         overflow: hidden; /* Evita el scroll en la vista */
-        background-image: url('../../content/Images/art.png');
+        background-image: url('https://img.freepik.com/free-photo/particle-view-modern-luxury-white-car-parked-indoors-daytime_146671-16450.jpg?t=st=1723180057~exp=1723183657~hmac=10394f5939ad50260d3334714553c0e84262786f710b1d6e7f4f26f6c5f837ff&w=1380');
         background-size: cover;
         background-position: center;
-        background-color: white;        
+        background-color: white;
+        min-height: 100vh;
     }
 
     .container-login {
@@ -25,11 +26,13 @@
     }
 
     .login-form {
-        background-color: rgba(255, 255, 255, 0.9);
+        background: transparent;
         padding: 30px;
-        border-radius: 10px;
+        border: 2px solid rgba(255, 255, 255, .5);
+        border-radius: 20px;
+        backdrop-filter:blur(20px);
         text-align: center;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
         max-width: 400px;
         width: 100%;
     }
@@ -48,24 +51,23 @@
         }
 
     .boton-IS, .boton-RG {
-        background-color: #007bff;
+        width: 100%;
+        height: 45px;
+        background:#078EBD;
         border: none;
         border-radius: 25px;
         color: white;
-        padding: 10px 20px;
         cursor: pointer;
         transition: all 0.3s ease;
         text-transform: uppercase;
         text-decoration: none;
-        font-size: 14px;
+        font-size: 1em;
         letter-spacing: 1px;
         margin-top: 10px;
-        display: inline-block;
-        width: 100%;
     }
 
         .boton-IS:hover, .boton-RG:hover {
-            background-color: #0056b3;
+            background-color: #005696;
         }
 
     #olvidadoContrasena {
@@ -103,9 +105,10 @@
 <div class="container-login">
     <div class="login-form">
         <form action="@Url.Action("Index", "Login")" method="post">
-            <h2 style="background-color: darkblue;">Iniciar sesión</h2>
+            <h2>Iniciar sesión</h2>
 
             <input type="text" id="username" name="username" class="form-control" placeholder="Cedula Usuario" required>
+
             <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
 
             <input type="submit" value="Ingresar" class="boton-IS">
