--- a/ProyectoFinal_ActivosFijos/Views/Carros/MostrarVehiculoIndividual.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/MostrarVehiculoIndividual.cshtml
@@ -1,127 +1,393 @@
 ﻿@model ProyectoFinal_ActivosFijos.Models.ViewModel.CarrosViewModel
 
 @{
-    ViewBag.Title = "MostrarInformacionCarros";
+    ViewBag.Title = "Vista Individual Carros";
     Layout = "~/Views/Shared/_ClientLayout.cshtml"; // Utiliza el diseño específico para cliente
 }
+
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Detalles del Vehiculo</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Product Card/Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Estilos CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
+
+        * {
+            box-sizing: border-box;
             padding: 0;
-            background-color: #f4f4f4;
+            margin: 0;
+            font-family: 'Open Sans', sans-serif;
         }
 
-        .hotel-details {
-            max-width: 800px;
-            margin: 20px auto;
-            background-color: white;
-            color: black;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        body {
+            line-height: 1.5;
         }
 
-        .hotel-images {
-            display: flex;
-            align-items: flex-start;
-            margin-bottom: 25px;
+        .card-wrapper {
+            max-width: 1100px;
+            margin: 0 auto;
         }
 
-            .hotel-images .no-image {
-                display: flex;
-                justify-content: center; /* Centra el contenido horizontalmente */
-                align-items: center; /* Centra el contenido verticalmente */
-                margin-bottom: 25px;
-            }
-
-            .hotel-images img {
-                max-width: 400px;
-                height: auto;
-                margin-right: 20px;
-                transition: transform 0.3s ease;
-                cursor: pointer;
-            }
-
-                .hotel-images img:hover {
-                    transform: scale(1.1); /* Hacer zoom al pasar el cursor sobre la imagen */
-                }
-
-        .hotel-info p {
-            margin-bottom: 10px;
-        }
-
-        .regresar {
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            margin-bottom: 10px;
+        img {
             width: 100%;
             display: block;
+        }
+
+        .img-display {
+            overflow: hidden;
+        }
+
+        .img-showcase {
+            display: flex;
+            width: 100%;
+            transition: all 0.5s ease;
+        }
+
+            .img-showcase img {
+                min-width: 100%;
+            }
+
+        .img-select {
+            display: flex;
+        }
+
+        .img-item {
+            margin: 0.3rem;
+        }
+
+            .img-item:nth-child(1),
+            .img-item:nth-child(2),
+            .img-item:nth-child(3) {
+                margin-right: 0;
+            }
+
+            .img-item:hover {
+                opacity: 0.8;
+            }
+
+        .product-content {
+            padding: 2rem 1rem;
+        }
+
+        .product-title {
+            font-size: 3rem;
+            text-transform: capitalize;
+            color: #12263a;
+            margin: 1rem 0;
             text-align: center;
         }
+
+            .product-title::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                height: 4px;
+                width: 80px;
+                background: #12263a;
+            }
+
+        .product-link {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 400;
+            font-size: 0.9rem;
+            display: inline-block;
+            margin-bottom: 0.5rem;
+            background: #256eff;
+            color: #fff;
+            padding: 0 0.3rem;
+            transition: all 0.5s ease;
+        }
+
+            .product-link:hover {
+                opacity: 0.9;
+            }
+
+        .product-rating {
+            color: #ffc107;
+        }
+
+            .product-rating span {
+                font-weight: 600;
+                color: #252525;
+            }
+
+        .product-price {
+            margin: 1rem 0;
+            font-size: 1rem;
+            font-weight: 700;
+        }
+
+            .product-price span {
+                font-weight: 400;
+            }
+
+        .last-price span {
+            color: #f64749;
+            text-decoration: line-through;
+        }
+
+        .new-price span {
+            color: #256eff;
+        }
+
+        .product-detail h2 {
+            text-transform: capitalize;
+            color: #12263a;
+            padding-bottom: 0.6rem;
+        }
+
+        .product-detail p {
+            font-size: 0.9rem;
+            padding: 0.3rem;
+            opacity: 0.8;
+        }
+
+        .product-detail ul {
+            margin: 1rem 0;
+            font-size: 0.9rem;
+        }
+
+            .product-detail ul li {
+                margin: 0;
+                list-style: none;
+                background: url(shoes_images/checked.png) left center no-repeat;
+                background-size: 18px;
+                padding-left: 1.7rem;
+                margin: 0.4rem 0;
+                font-weight: 600;
+                opacity: 0.9;
+            }
+
+                .product-detail ul li span {
+                    font-weight: 400;
+                }
+
+        .purchase-info {
+            margin: 1.5rem 0;
+        }
+
+            .purchase-info input,
+            .purchase-info .btn {
+                border: 1.5px solid #ddd;
+                border-radius: 25px;
+                text-align: center;
+                padding: 0.45rem 0.8rem;
+                outline: 0;
+                margin-right: 0.2rem;
+                margin-bottom: 1rem;
+            }
+
+            .purchase-info input {
+                width: 60px;
+            }
+
+            .purchase-info .btn {
+                cursor: pointer;
+                color: #fff;
+            }
+
+                .purchase-info .btn:first-of-type {
+                    background: #256eff;
+                }
+
+                .purchase-info .btn:last-of-type {
+                    background: #f64749;
+                }
+
+                .purchase-info .btn:hover {
+                    opacity: 0.9;
+                }
+
+        .social-links {
+            display: flex;
+            align-items: center;
+        }
+
+            .social-links a {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 32px;
+                height: 32px;
+                color: #000;
+                border: 1px solid #000;
+                margin: 0 0.2rem;
+                border-radius: 50%;
+                text-decoration: none;
+                font-size: 0.8rem;
+                transition: all 0.5s ease;
+            }
+
+                .social-links a:hover {
+                    background: #000;
+                    border-color: transparent;
+                    color: #fff;
+                }
+
+        @@media screen and (min-width: 992px) {
+            .card {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-gap: 1.5rem;
+                background-color: #fad9d9;
+            }
+
+            .card-wrapper {
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .product-imgs {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .product-content {
+                padding-top: 0;
+            }
+        }
     </style>
+
 </head>
 <body>
 
-    <div class="hotel-details">
-        <h1 style="text-align: center;">@Html.DisplayFor(model => model.Modelo)</h1>
+    <div class="card-wrapper">
+        <div class="card" style="background-color: #fad9d9;">
 
-        <div class="hotel-images">
-            <div>
-                @if (Model.Imagen1 != null)
-                {
-                    <img id="main-image" src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="Imagen del Hotel" class="img-fluid" />
-                }
-                else
-                {
-                    <img class="no-image" src="~/Images/No-image-found.jpg" alt="Imagen del Hotel" />
-                }
+
+
+
+
+            <!-- card left -->
+            <div class="product-imgs">
+                <div class="img-display">
+                    <div class="img-showcase">
+                        @if (Model.Imagen1 != null)
+                        {
+                            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="car image">
+                        }
+                        @if (Model.Imagen2 != null)
+                        {
+                            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="car image">
+                        }
+                    </div>
+                </div>
+                <div class="img-select">
+                    @if (Model.Imagen1 != null)
+                    {
+                        <div class="img-item">
+                            <a href="#" data-id="1">
+                                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="car image">
+                            </a>
+                        </div>
+                    }
+                    @if (Model.Imagen2 != null)
+                    {
+                        <div class="img-item">
+                            <a href="#" data-id="2">
+                                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="car image">
+                            </a>
+                        </div>
+                    }
+                </div>
             </div>
-            <div style="display: flex; flex-direction: column;">
-                @if (Model.Imagen2 != null)
-                {
-                    <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="Segunda Imagen del Hotel" class="img-fluid" style="max-width: 200px; height: auto; margin-bottom: 10px;" onclick="swapImages(this)" />
-                }
+
+
+            <!-- card right -->
+            <div class="product-content">
+                <h2 class="product-title">@Html.DisplayFor(model => model.Modelo)</h2>
+
+                <div class="product-price">
+                    <p class="new-price">Precio: <span>@Html.DisplayFor(model => model.Precio)</span></p>
+                </div>
+
+                <div class="product-detail">
+                    <h5>Acerca del articulo:</h5>
+                    <p>@Html.DisplayFor(model => model.Descripcion)</p>
+                    <ul>
+                        <li>Año: <span>@Html.DisplayFor(model => model.Anio)</span></li>
+                        <li>Combustible tipo: <span>@Html.DisplayFor(model => model.Combustible)</span></li>
+                        <li>Tipo de transmision: <span>@Html.DisplayFor(model => model.Transmision)</span></li>
+                    </ul>
+                </div>
+
+
+
+
+                
+
+                <div class="purchase-info">
+                    @if (Model.CantidadEnStock > 0)
+                    {
+                        <form action="@Url.Action("AgregarVehiculoAlCarrito", "Carrito")" method="post" class="mt-3">
+                            <input type="hidden" name="carroId" value="@Model.Id" />
+                            <button type="submit" class="btn">
+                                Agregar al carrito<i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </form>
+                    }
+                    else
+                    {
+                        <p class="text-center text-danger mt-3">No disponible</p>
+                    }
+                    
+                    <input type="button" class="btn" style="width: 130px;" value="Regresar" onclick="document.location.href = '@Url.Content("~/Carros/VistaVehiculos")'" />
+
+                </div>
+
+
+                <div class="social-links">
+                    <p>Share At: </p> <br />
+                    <a href="https://www.facebook.com/ToyotaCostaRica" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://x.com/toyotacr" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/toyotacostarica/?hl=es" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    </a>
+                </div>
             </div>
-        </div>
-
-        <div class="hotel-info">
-            <p><strong>Año:</strong> @Html.DisplayFor(model => model.Id)</p>
-
-            <p><strong>Año:</strong> @Html.DisplayFor(model => model.Anio)</p>
-            <p><strong>Combustible tipo:</strong> @Html.DisplayFor(model => model.Combustible)</p>
-            <p><strong>Transmision:</strong> @Html.DisplayFor(model => model.Transmision)</p>
-
-
-            <p><strong>Descripción:</strong> @Html.DisplayFor(model => model.Descripcion)</p>
-            <p><strong>Precio:</strong> @Html.DisplayFor(model => model.Precio)</p>
-
-            <input type="button" class="btn btn-outline-danger" value="Regresar" onclick="document.location.href = '@Url.Content("~/Carros/VistaVehiculos")'" />
-
         </div>
     </div>
-    <!-- Scripts JavaScript -->
-    <script>
-        function swapImages(img) {
-            var mainImage = document.getElementById('main-image');
-            var clickedSrc = img.src;
-            var mainSrc = mainImage.src;
-            mainImage.src = clickedSrc;
-            img.src = mainSrc;
-            mainImage.style.maxWidth = '400px';
-            mainImage.style.marginRight = '20px';
-            img.style.maxWidth = '200px';
-            img.style.marginRight = '0';
-        }
-    </script>
 
 </body>
 </html>
+
+
+<script>
+    const imgs = document.querySelectorAll('.img-select a');
+    const imgBtns = [...imgs];
+    let imgId = 1;
+
+    imgBtns.forEach((imgItem) => {
+        imgItem.addEventListener('click', (event) => {
+            event.preventDefault();
+            imgId = imgItem.dataset.id;
+            slideImage();
+        });
+    });
+
+    function slideImage() {
+        const displayWidth = document.querySelector('.img-showcase img:first-child').clientWidth;
+
+        document.querySelector('.img-showcase').style.transform = `translateX(${- (imgId - 1) * displayWidth}px)`;
+    }
+
+    window.addEventListener('resize', slideImage);
+</script>
+
+
