--- a/ProyectoFinal_ActivosFijos/Views/Shared/_ClientLayout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_ClientLayout.cshtml
@@ -13,96 +13,370 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+
+    <!-- .................FontAwesome Link................. -->
+    <link rel="stylesheet" href="./fontawesome-free-6.4.0-web/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <style>
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
+            text-decoration: none;
+            list-style: none;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
 
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
+        a {
+            text-decoration: none;
+        }
+
+        :root {
+            --color-primary: #ff2d2d;
+            --color-white: #eaeaea;
+            --color-dark: #333;
+            --color-black: #222;
+        }
+
+        .btn {
+            display: inline-block;
+            width: fit-content;
+            padding: 12px 28px;
+            background: var(--color-primary);
+            border: 2px solid var(--color-primary);
+            border-radius: 4px;
+            box-shadow: 0 10px rgba(0, 0, 0, 0.2);
+            color: var(--color-white);
+            letter-spacing: .4px;
+            font-weight: 600;
+            transition: .4s ease;
+        }
+
+            .btn:hover {
+                background: transparent;
+                color: var(--color-primary);
+            }
+
+        .container {
+            max-width: 1620px;
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        .nav {
             width: 100%;
-            padding: 20px 100px;
-            background: #003b57;
+            height: 5rem;
+            position: fixed;
+            left: 0;
+            top: 0;
+            z-index: 100;
+            display: grid;
+            place-items: center;
+            margin-top: 20px;
+        }
+
+        .nav-container {
             display: flex;
+            margin-top: 20px;
             justify-content: space-between;
             align-items: center;
-            z-index: 99;
         }
 
-        .navbar {
-            margin-top: 80px;
+            .nav-container ul {
+                display: flex;
+                align-items: center;
+                gap: 30px;
+            }
+
+        .logo h3 {
+            font-size: 25px;
+            color: var(--color-black);
         }
 
-        .nav-link:hover {
-            color: #078ebd;
+        .nav-link li a {
+            color: var(--color-black);
+            font-size: 17px;
+            transition: .4s ease;
         }
 
-        .active-nav-link {
-            font-weight: bold;
-            color: #078ebd;
+            .nav-link li a:hover {
+                color: var(--color-primary);
+                text-decoration: none;
+            }
+
+        .nav-link li .active {
+            color: var(--color-primary);
+            text-decoration: none;
+        }
+
+        .social-link li a {
+            height: 40px;
+            width: 40px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid transparent;
+            transform: rotate(45deg);
+            transition: .4s ease;
+            animation: socialAni forwards 1s ease;
+            animation-delay: calc(.2s*var(--i));
+            opacity: 0;
+        }
+
+            .social-link li a:hover {
+                border-color: black;
+                text-decoration: none;
+            }
+
+            .social-link li a i {
+                transform: rotate(-45deg);
+                font-size: 20px;
+                color: black;
+                text-decoration: none;
+            }
+
+
+        header {
+            width: 100vh;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+        }
+
+        .header-left {
+            max-width: 620px;
+            position: relative;
+        }
+
+            .header-left h1 {
+                font-size: 54px;
+                line-height: 1.2;
+                color: var(--color-black);
+                animation: H1Ani forwards 1s ease;
+                opacity: 0;
+                animation-delay: 1s;
+            }
+
+            .header-left h3 {
+                font-size: 40px;
+                font-weight: 400;
+                color: var(--color-primary);
+                margin-top: .5rem;
+                animation: H1Ani forwards 1s ease;
+                opacity: 0;
+                animation-delay: .8s;
+            }
+
+            .header-left p {
+                margin: 15px 0 30px;
+                line-height: 150%;
+                font-size: 16px;
+                animation: logoAni forwards 1s ease;
+                opacity: 0;
+                animation-delay: .6s;
+            }
+
+        .header-container {
+            display: grid;
+            grid-template-columns: auto auto;
+            align-items: center;
+            height: 100%;
+            justify-content: space-between;
+        }
+
+        .header-right {
+            position: relative;
+            width: 450px;
+            height: 450px;
+            transform: rotate(45deg);
+            right: -7%;
+        }
+
+        .sq-box {
+            height: 100%;
+            width: 100%;
+            margin-left: 230px;
+            margin-top: -315px;
+            border: 25px solid var(--color-primary);
+            background: var(--color-white);
+            box-shadow: -15px 15px 15px rgba(0, 0, 0, 0.2);
+            opacity: 0;
+            animation: zoomOut 1s ease forwards;
+            animation-delay: 1.3s;
+        }
+
+            .sq-box img {
+                position: absolute;
+                transform: rotate(-45deg);
+                max-width: 700px;
+                top: 130px;
+                left: -180px;
+                opacity: 0;
+                animation: carAni forwards 1s ease;
+                animation-delay: 1.6s;
+            }
+
+        .sq-box2 {
+            position: absolute;
+            width: 700px;
+            height: 700px;
+            position: absolute;
+            margin-top: 200px;
+            margin-right: -40px;
+            width: 700px;
+            height: 700px;
+            background: var(--color-primary);
+            transform: rotate(45deg);
+            top: -26%;
+            right: -26%;
+            z-index: -1;
+            opacity: 0;
+            animation: sqbox2Ani forwards 1s ease;
+            animation-delay: .3s;
+        }
+
+        @@keyframes logoAni {
+            0% {
+                transform: translateX(-100px);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        @@keyframes NavliaAni {
+            0% {
+                transform: translateY(100px);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @@keyframes socialAni {
+            0% {
+                transform: translateX(100px) rotate(45deg);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateX(0) rotate(45deg);
+                opacity: 1;
+            }
+        }
+
+        @@keyframes H1Ani {
+            0% {
+                transform: translateY(-100px);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @@keyframes zoomOut {
+            0% {
+                transform: scale(1.1);
+                opacity: 0;
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        @@keyframes carAni {
+            0% {
+                transform: translate(180px, -300px) scale(0) rotate(-45deg);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translate(0, 0) scale(1) rotate(-45deg);
+                opacity: 1;
+            }
+        }
+
+        @@keyframes sqbox2Ani {
+            0% {
+                right: -40%;
+                opacity: 0;
+            }
+
+            100% {
+                right: -26%;
+                opacity: 1;
+            }
+        }
+
+        .no-rotate {
+            transform: rotate(0deg); /* Desactiva la rotación */
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <a href="#" class="navbar-brand">Toyota</a>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+
+
+
+
+
+
+
+    <!-- .................Nav................. -->
+    <nav>
+        <div class="container nav-container">
+            <a href="" class="logo"><h3>Toyota</h3></a>
+
+            <ul class="nav-link">
+                <li><a href="" class="active">@Html.ActionLink("Home", "Index", "Comprador", new { area = "" }, new { @class = "nav-link" })</a></li>
+                <li><a href="">@Html.ActionLink("Vehiculos Disponibles", "VistaVehiculos", "Carros", new { area = "" }, new { @class = "nav-link" })</a></li>
+                <li><a href="">@Html.ActionLink("Repuestos Disponibles", "VistaRepuestos", "Repuesto", new { area = "" }, new { @class = "nav-link" })</a></li>
             </ul>
-        </nav>
-    </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">ActivosFijos</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <ul class="social-link">
+                <li><a href="https://www.facebook.com/ToyotaCostaRica" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://x.com/toyotacr" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/toyotacostarica/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img src="~/images/profile-icon.png" alt="Perfil" style="width: 24px; height: 24px;" />
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         <a class="dropdown-item" href="@Url.Action("Edit", "Comprador", new { id = (Session["UsuarioActual"] as ProyectoFinal_ActivosFijos.Models.ViewModel.UsuariosViewModel)?.Id })">Gestion de Perfil</a>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Carrito")">Ver carrito de compras</a>
                         <a class="dropdown-item" href="@Url.Action("CerrarSesion", "Comprador")">Cerrar Sesión</a>
                     </div>
                 </li>
+
             </ul>
+
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("Toyota", "Index", "Comprador", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between" id="navbarNav2">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">@Html.ActionLink("Vehiculos Disponibles", "VistaVehiculos", "Carros", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Repuestos Disponibles", "VistaRepuestos", "Repuesto", new { area = "" }, new { @class = "nav-link" })</li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+
+
+
+
+
 
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Toyota</p>
-        </footer>
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
