--- a/ProyectoFinal_ActivosFijos/Views/Comprador/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Comprador/Index.cshtml
@@ -335,7 +335,7 @@
                 <h1>Encuentra tu vehiculo</h1>
                 <h3>Con nosotros!</h3>
                 <p>
-                    Somos líderes en la venta y distribución de vehículos nuevos en Costa Rica. Nos enorgullece<br> ofrecer una amplia gama de servicios y soluciones de movilidad, alineados con la sostenibilidad<br>, reafirmando nuestro compromiso con ustedes.
+                    Somos líderes en la venta y distribución de vehículos nuevos en Costa Rica. Nos enorgullece ofrecer una amplia gama de servicios y soluciones de movilidad, alineados con la sostenibilidad, reafirmando nuestro compromiso con ustedes.
                 </p>
                 <a href="@Url.Action("VistaVehiculos", "Carros")" class="btn">Explorar Vehículos</a>
             </div>
