--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/MostrarRepuestoIndividual.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/MostrarRepuestoIndividual.cshtml
@@ -1,7 +1,7 @@
-﻿@model ProyectoFinal_ActivosFijos.Models.ViewModel.CarrosViewModel
+﻿@model ProyectoFinal_ActivosFijos.Models.ViewModel.RepuestosViewModel
 
 @{
-    ViewBag.Title = "Vista Individual Carros";
+    ViewBag.Title = "Vista Individual Repuestos";
     Layout = "~/Views/Shared/_ClientLayout.cshtml"; // Utiliza el diseño específico para cliente
 }
 
@@ -14,7 +14,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-
 
     <style>
 
@@ -261,7 +260,6 @@
 
 </head>
 <body>
-
     <div class="card-wrapper">
         <div class="card" style="background-color: #fad9d9;">
 
@@ -271,11 +269,11 @@
                     <div class="img-showcase">
                         @if (Model.Imagen1 != null)
                         {
-                            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="car image">
+                            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="repuesto image">
                         }
                         @if (Model.Imagen2 != null)
                         {
-                            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="car image">
+                            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="repuesto image">
                         }
                     </div>
                 </div>
@@ -284,7 +282,7 @@
                     {
                         <div class="img-item">
                             <a href="#" data-id="1">
-                                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="car image">
+                                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen1)" alt="repuesto image">
                             </a>
                         </div>
                     }
@@ -292,7 +290,7 @@
                     {
                         <div class="img-item">
                             <a href="#" data-id="2">
-                                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="car image">
+                                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen2)" alt="repuesto image">
                             </a>
                         </div>
                     }
@@ -301,7 +299,7 @@
 
             <!-- card right -->
             <div class="product-content">
-                <h2 class="product-title">@Html.DisplayFor(model => model.Modelo)</h2>
+                <h2 class="product-title">@Html.DisplayFor(model => model.Nombre)</h2>
 
                 <div class="product-price">
                     <p class="new-price">Precio: <span>@Html.DisplayFor(model => model.Precio)</span></p>
@@ -312,16 +310,17 @@
                     <p>@Html.DisplayFor(model => model.Descripcion)</p>
                     <ul>
                         <li>Año: <span>@Html.DisplayFor(model => model.Anio)</span></li>
-                        <li>Combustible tipo: <span>@Html.DisplayFor(model => model.Combustible)</span></li>
-                        <li>Tipo de transmision: <span>@Html.DisplayFor(model => model.Transmision)</span></li>
+                        <li>Marca: <span>@Html.DisplayFor(model => model.Marca)</span></li>
+                        <li>Modelo: <span>@Html.DisplayFor(model => model.Modelo)</span></li>
+                        <li>Estado: <span>@Html.DisplayFor(model => model.Estado)</span></li>
                     </ul>
                 </div>
 
                 <div class="purchase-info">
                     @if (Model.CantidadEnStock > 0)
                     {
-                        <form action="@Url.Action("AgregarVehiculoAlCarrito", "Carrito")" method="post" class="mt-3">
-                            <input type="hidden" name="carroId" value="@Model.Id" />
+                        <form action="@Url.Action("AgregarRepuestoAlCarrito", "Carrito")" method="post" class="mt-3">
+                            <input type="hidden" name="repuestoId" value="@Model.Id" />
                             <button type="submit" class="btn">
                                 Agregar al carrito<i class="fas fa-shopping-cart"></i>
                             </button>
@@ -331,8 +330,8 @@
                     {
                         <p class="text-center text-danger mt-3">No disponible</p>
                     }
-                    
-                    <input type="button" class="btn" style="width: 130px;" value="Regresar" onclick="document.location.href = '@Url.Content("~/Carros/VistaVehiculos")'" />
+
+                    <input type="button" class="btn" style="width: 130px;" value="Regresar" onclick="document.location.href = '@Url.Content("~/Repuesto/VistaRepuestos")'" />
 
                 </div>
 
